[package]
name = "rendergraph"
version = "0.1.0"
authors = ["Nicolas Silva <nical@fastmail.com>"]
edition = "2018"

[dependencies]
euclid = "0.19.8"
guillotiere = "0.4.0"
serde = { version = "1.0", optional = true, features = ["serde_derive"] }

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "cpu_time"
harness = false

[features]
checks = []
serialization = ["serde", "guillotiere/serialization"]

[workspace]
members = ["cli"]

